Fixed scrollbar homepage

--- a/css/_home.css
+++ b/css/_home.css
@@ -41,17 +41,30 @@
     text-decoration: underline;
 }
 
-.scroll-container {
+.scroll-container1, .scroll-container2{
     display: flex;
-    gap: 20px;
-    overflow-x: auto;
-    padding: 10px 0;
+    overflow-x: auto; 
+    scroll-snap-type: x mandatory; 
+    -webkit-overflow-scrolling: touch;
+    gap: 10px;
+    padding: 10px, 0;
+    width: 100%;
+}
+
+.scroll-container2 {
     justify-content: center;
 }
 
-.scroll-container img {
-    width: 300px;
-    height: 300px;
+.scroll-container-item {
+    flex: 0 0 auto; 
+    scroll-snap-align: center; 
+    width: 300px; 
+    height: 300px; 
+}
+
+.scroll-container1 img, .scroll-container2 img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 4px;
 }
@@ -67,6 +80,7 @@
     color: #F2F2F2;
     margin-bottom: 20px;
     text-align: center;
+    margin-top: 50px;
 }
 
 .about h2:hover {
